--- a/bitcamp-project-server/.project
+++ b/bitcamp-project-server/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>mini-pms-29-a-server</name>
-	<comment>Project mini-pms-29-a-server created by Buildship.</comment>
+	<name>bitcamp-project-server</name>
+	<comment>Project bitcamp-project-server created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
@@ -14,15 +14,4 @@
 	<natures>
 		<nature>org.eclipse.buildship.core.gradleprojectnature</nature>
 	</natures>
-	<filteredResources>
-		<filter>
-			<id>1615260197082</id>
-			<name></name>
-			<type>30</type>
-			<matcher>
-				<id>org.eclipse.core.resources.regexFilterMatcher</id>
-				<arguments>node_modules|.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
-			</matcher>
-		</filter>
-	</filteredResources>
 </projectDescription>
