--- a/bitcamp-project-client/app/build.gradle
+++ b/bitcamp-project-client/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     implementation 'com.google.guava:guava:29.0-jre'
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
+    implementation 'org.mybatis:mybatis:3.5.6'
 }
 
 application {
