--- a/bitcamp-project-server/app/build.gradle
+++ b/bitcamp-project-server/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id 'war'
 }
 
-// 자바 소스를 컴파일 할 때 적용할 옵션
+// 자바 소스를 컴파일 할 때 적용할 옵션 
 tasks.withType(JavaCompile) {
     // $javac -encoding UTF-8 ...
     options.encoding = 'UTF-8';
@@ -14,8 +14,12 @@ tasks.withType(JavaCompile) {
 
 eclipse {
     project {
-        name = "bitcamp-project-server"
+        name = "bitcamp-project-server"3
     }
+}
+
+war {
+  archiveBaseName = "pms"
 }
 
 repositories {
@@ -30,4 +34,8 @@ dependencies {
     implementation 'com.google.guava:guava:29.0-jre'
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
     implementation 'org.mybatis:mybatis:3.5.6'
+}
+
+application {
+    mainClass = 'com.eomcs.pms.ServerApp'
 }
