--- a/bitcamp-project-server/app/build.gradle
+++ b/bitcamp-project-server/app/build.gradle
@@ -14,7 +14,7 @@ tasks.withType(JavaCompile) {
 
 eclipse {
     project {
-        name = "bitcamp-project-server"3
+        name = "bitcamp-project-server"
     }
 }
 
@@ -34,8 +34,4 @@ dependencies {
     implementation 'com.google.guava:guava:29.0-jre'
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
     implementation 'org.mybatis:mybatis:3.5.6'
-}
-
-application {
-    mainClass = 'com.eomcs.pms.ServerApp'
 }
