--- a/bitcamp-project-server/app/build.gradle
+++ b/bitcamp-project-server/app/build.gradle
@@ -33,13 +33,16 @@ dependencies {
     // => implementation : 컴파일한 후 생성되는 빌드 파일에 포함된다.
     // => compileOnly : 컴파일한 후 생성되는 빌드 파일에 포함되지 않는다.
     //
-    
+
     // Thumbnailator 썸네일 생성 라이브러리
     implementation 'net.coobird:thumbnailator:0.4.13'
     
     // Apache의 파일업로드 처리 라이브러리
     //implementation 'commons-fileupload:commons-fileupload:1.4'
   
+    // JSTL API 구현체
+    providedCompile 'javax.servlet:jstl:1.2'
+
     // 웹 애플리케이션을 제작할 때 사용하는 Servlet/JSP 라이브러리
     implementation 'javax.servlet:javax.servlet-api:4.0.1'
  
