--- a/bitcamp-project-server/app/build.gradle
+++ b/bitcamp-project-server/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     // Mybatis 퍼시스턴스 프레임워크
     implementation 'org.mybatis:mybatis:3.5.6'
     
+    implementation 'org.springframework:spring-webmvc:5.3.7'
+    
     // JSON 포맷을 다루는 라이브러리
     implementation 'com.google.code.gson:gson:2.8.7'
     
