--- a/bitcamp-project-server/app/build.gradle
+++ b/bitcamp-project-server/app/build.gradle
@@ -52,7 +52,16 @@ dependencies {
     // Mybatis 퍼시스턴스 프레임워크
     implementation 'org.mybatis:mybatis:3.5.6'
     
+    // Spring WebMVC 프레임워크
     implementation 'org.springframework:spring-webmvc:5.3.7'
+    
+    // Spring JDBC 관련 라이브러리
+    implementation 'org.springframework:spring-jdbc:5.3.7'
+    
+    // Mybatis와 Spring을 중계하는 역할을 하는 라이브러리
+    // - 이 라이브러리가 있어야만 스프링 컨테이너에서
+    //   SqlSessionFactory 객체를 자동 생성할 수 있다.
+    implementation 'org.mybatis:mybatis-spring:2.0.6'
     
     // JSON 포맷을 다루는 라이브러리
     implementation 'com.google.code.gson:gson:2.8.7'
